--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-flask
-scrapy
-requests
-requests-html
-pyppeteer
-undetected-chromedriver
-selenium
-selenium-stealth
-fake-useragent
-cloudscraper
+fastapi
+uvicorn[standard]
+crawlee
