--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,12 @@
 services:
   - type: web
-    name: scrapling-api
+    name: stealth-crawler-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     autoDeploy: true
+    envVars:
+      - key: PYTHONPATH
+        value: .
+      - key: PORT
+        value: 10000
