--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
 fastapi
 uvicorn[standard]
 crawlee
+beautifulsoup4
+requests
+fake-useragent
+random-header
+argparse
+json
+csv
+logging
+configparser
