--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: stealth-crawler-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: python start.py
     autoDeploy: true
     envVars:
       - key: PYTHONPATH
