--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,11 @@ services:
     name: stealth-crawler-api
     runtime: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python start.py
+    startCommand: gunicorn main:app -w 4 -k uvicorn.workers.UvicornWorker --bind 0.0.0.0:$PORT
     autoDeploy: true
+    healthCheckPath: /health
     envVars:
       - key: PYTHONPATH
         value: .
-      - key: PORT
-        value: 10000
+      - key: ENVIRONMENT
+        value: production
